--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -19,5 +19,7 @@
 <script>
     net.mcarolan.flatmappybird.UI().main(document.getElementById('canvas'));
 </script>
+
+<img src="pipe.png" id="pipeImage" style="display: none" />
 </body>
 </html>
